css card wrap container fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1112,6 +1112,7 @@ input#file-upload {
 .card-small-container-wrap {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 50px;
 }
 
 .card-small-container{
